--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "source/LibUISharp.Native/ref"]
-	path = source/LibUISharp.Native/ref
-	url = https://github.com/tom-corwin/libui
+[submodule "external/libui"]
+	path = external/libui
+	url = https://github.com/tom-corwin/libui.git
