More is finished and prepping for submodule addition.

--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -22,6 +22,7 @@
     <Compile Include="src\LibUISharp\Controls\*.cs" />
     <Compile Include="src\LibUISharp\Drawing\*.cs" />
     <Compile Include="src\LibUISharp\Internal\*.cs" />
+    <Compile Include="src\GlobalSuppressions.cs" />
     <Compile Include="src\LibUISharp\Internal\LibUI\LibUI.cs" />
     <Compile Include="src\LibUISharp\Internal\LibUI\LibUI.Delegates.cs" />
     <Compile Include="src\LibUISharp\Internal\LibUI\LibUI.Enums.cs" />
