--- a/source/source.props
+++ b/source/source.props
@@ -1,4 +1,51 @@
 <Project>
-  <Import Project="..\global.props" />
-  <LibUISharpSourcePath>$(LibUISharpBasePath)source\</LibUISharpSourcePath>
+  <Choose>
+    <When Condition="'$(ConfigurationGroup)'=='Debug'">
+      <PropertyGroup>
+        <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
+        <DebugSymbols Condition="'$(DebugSymbols)'==''">true</DebugSymbols>
+        <Optimize Condition="'$(Optimize)'==''">false</Optimize>
+        <DebugType Condition="'$(DebugType)'==''">full</DebugType>
+        <DefineConstants>DEBUG;TRACE</DefineConstants>
+        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+      </PropertyGroup>
+    </When>
+    <When Condition="'$(ConfigurationGroup)'=='Release'">
+      <PropertyGroup>
+        <DebugSymbols Condition="'$(DebugSymbols)'==''">true</DebugSymbols>
+        <Optimize Condition="'$(Optimize)'==''">true</Optimize>
+        <DebugType Condition="'$(DebugType)'==''">pdbonly</DebugType>
+        <DefineConstants>TRACE</DefineConstants>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+      </PropertyGroup>
+    </When>
+  </Choose>
+  <PropertyGroup>
+    <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
+    <OutputPath>..\..\build\$(MSBuildProjectName)\bin</OutputPath>
+    <Platform>AnyCPU</Platform>
+    <RootNamespace>$(MSBuildProjectName)</RootNamespace>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <NeutralLanguage>en-US</NeutralLanguage>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyName>$(MSBuildProjectName)</AssemblyName>
+    <AssemblyTitle>$(MSBuildProjectName)</AssemblyTitle>
+    <Authors>Thomas Corwin, et al.</Authors>
+    <Copyright>2018 (c) Thomas Corwin</Copyright>
+    <VersionPrefix>0.3.5</VersionPrefix>
+    <VersionSuffix>alpha</VersionSuffix>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PackageId>$(MSBuildProjectName)</PackageId>
+    <Description>LibUI Bindings for .NET Core (C#)</Description>
+    <PackageTags>libui;ui;gui;drawing;desktop;cross-platform;netcore;netstandard</PackageTags>
+    <PackageReleaseNotes>Version $(VersionPrefix)-$(VersionSuffix)</PackageReleaseNotes>
+    <PackageIconUrl></PackageIconUrl>
+    <PackageProjectUrl>https://github.com/tom-corwin/LibUISharp</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/tom-corwin/LibUISharp/blob/master/LICENSE.md</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/tom-corwin/LibUISharp</RepositoryUrl>
+  </PropertyGroup>
 </Project>
