I forgot to restore the packages befoore builing with the CI. Oops.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,8 @@ environment:
   LIBUISHARP_PRERELEASE: 1
 nuget:
   project_feed: true
+before_build:
+- cmd: dotnet restore LibUISharp.sln
 build:
   project: LibUISharp.sln
   publish_nuget: true
