--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,24 +6,20 @@ dotnet_csproj:
   file: '**\*.csproj'
   version: '{version}'
   package_version: '{version}'
-environment:
-  LIBUISHARP_PRERELEASE: 1
 nuget:
   project_feed: true
 before_build:
 - cmd: dotnet restore LibUISharp.sln
 build:
-  project: LibUISharp.sln
+  project: source\LibuiSharp\LibUISharp.csproj
   publish_nuget: true
   publish_nuget_symbols: true
   include_nuget_references: true
   verbosity: detailed
 artifacts:
-- path: '**\*.nuget'
+- path: 'build\nuget\LibUISharp-*.nuget'
   name: LibUISharp
 deploy:
 - provider: NuGet
   api_key:
     secure: IZppUyZ6HPKxAYqqlqWV8CPbsYJkbJGncDFIpm+lSNwGPEjynq1NsGZ4H5K/ryHh
-  on:
-    LIBUISHARP_PRERELEASE: 0
