Got some more finished. Trying to find some free time.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,9 @@
 # MSBuild Files
 *.sln        text eol=crlf
 *.csproj     text eol=crlf
-*.props      text eol=crlf
-#*.targets    text eol=crlf
+#*.props     text eol=crlf
+#*.targets   text eol=crlf
 *.cs         text eol=crlf
 
 # Text Documents
-*.md text
+*.md         text
