WIP: Moved unfinished things to other folder and finished some things.

--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -36,18 +36,8 @@
     <Compile Include="src\*.cs" />
     <Compile Include="src\LibUISharp\*.cs" />
     <Compile Include="src\LibUISharp\Drawing\*.cs" />
-    <Compile Include="src\LibUISharp\Drawing\Text\*.cs" />
+    <Compile Include="src\LibUISharp\Internal\*.cs" />
     <Compile Include="src\LibUISharp\SafeHandles\*.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="src\LibUISharp\Internal\Kernel32Library.cs" />
-    <Compile Include="src\LibUISharp\Internal\LibraryLoader.cs" />
-    <Compile Include="src\LibUISharp\Internal\LibuiExtensions.cs" />
-    <Compile Include="src\LibUISharp\Internal\LibuiLibrary.cs" />
-    <Compile Include="src\LibUISharp\Internal\NativeLibrary.cs" />
-    <Compile Include="src\LibUISharp\Internal\PathResolver.cs" />
-    <Compile Include="src\LibUISharp\Internal\PlatformHelper.cs" />
-    <Compile Include="src\LibUISharp\Internal\User32Library.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="lib\libui.dll">
@@ -70,6 +60,9 @@
     <None Include="..\External\libui\ui.h">
       <Link>ref/ui.h</Link>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\LibUISharp\Drawing\" />
   </ItemGroup>
   <PropertyGroup>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
