--- a/demos/DrawTextDemo/DrawTextDemo.csproj
+++ b/demos/DrawTextDemo/DrawTextDemo.csproj
@@ -1,16 +1,8 @@
-<!--| Project:  DrawTextDemo.csproj                |
-    | Assembly: DrawTextDemo.dll                   |
-    | Guid: {9AC41F47-CD16-4D92-8705-168BE57FA025} |-->
-<Project>
-  <PropertyGroup>
-    <BaseIntermediateOutputPath>..\..\build\demos\$(MSBuildProjectName)\obj</BaseIntermediateOutputPath>
-  </PropertyGroup>
-  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>7.2</LangVersion>
     <OutputType>Exe</OutputType>
-    <OutputPath>..\..\build\demos\$(MSBuildProjectName)\bin</OutputPath>
     <EnableDefaultItems>false</EnableDefaultItems>
     <Platform>AnyCPU</Platform>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
@@ -24,10 +16,9 @@
     <Version>0.3.5-alpha</Version>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="src\*.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\source\LibUISharp\LibUISharp.csproj" />
   </ItemGroup>
-  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
+  <ItemGroup>
+    <Compile Include="src\*.cs" />
+  </ItemGroup>
 </Project>
