--- a/demos/HistogramDemo/HistogramDemo.csproj
+++ b/demos/HistogramDemo/HistogramDemo.csproj
@@ -1,16 +1,8 @@
-<!--| Project:  HistogramDemo.csproj               |
-    | Assembly: HistogramDemo.dll                  |
-    | Guid: {0651053B-EA5F-4014-8001-32A7871F66C3} |-->
-<Project>
-  <PropertyGroup>
-    <BaseIntermediateOutputPath>..\..\build\demos\$(MSBuildProjectName)\obj</BaseIntermediateOutputPath>
-  </PropertyGroup>
-  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <LangVersion>7.2</LangVersion>
     <OutputType>Exe</OutputType>
-    <OutputPath>..\..\build\demos\$(MSBuildProjectName)\bin</OutputPath>
     <EnableDefaultItems>false</EnableDefaultItems>
     <Platform>AnyCPU</Platform>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
@@ -26,8 +18,4 @@
   <ItemGroup>
     <Compile Include="src\*.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\source\LibUISharp\LibUISharp.csproj" />
-  </ItemGroup>
-  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
