--- a/demos/HistogramDemo/HistogramDemo.csproj
+++ b/demos/HistogramDemo/HistogramDemo.csproj
@@ -18,4 +18,7 @@
   <ItemGroup>
     <Compile Include="src\*.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\source\LibUISharp\LibUISharp.csproj" />
+  </ItemGroup>
 </Project>
