--- a/source/LibUISharp/LibUISharp.csproj
+++ b/source/LibUISharp/LibUISharp.csproj
@@ -4,6 +4,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
     <LangVersion>7.2</LangVersion>
     <EnableDefaultItems>false</EnableDefaultItems>
     <RootNamespace>$(MSBuildProjectName)</RootNamespace>
@@ -13,25 +14,19 @@
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <Optimize>false</Optimize>
+    <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Release'">
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
     <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>embedded</DebugType>
     <DefineConstants>TRACE</DefineConstants>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.3" />
-    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
-    <PackageReference Include="System.Console" Version="4.3.1" />
-    <PackageReference Include="System.Diagnostics.Tools" Version="4.3.0" />
-    <PackageReference Include="System.Runtime.Serialization.Formatters" Version="4.3.0" />
-  </ItemGroup>
   <ItemGroup>
     <Compile Include="src\*.cs" />
     <Compile Include="src\LibUISharp\*.cs" />
@@ -39,30 +34,39 @@
     <Compile Include="src\LibUISharp\Internal\*.cs" />
     <Compile Include="src\LibUISharp\SafeHandles\*.cs" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(RuntimeIdentifier'=='win-x64'">
     <Content Include="lib\libui.dll">
-      <CopyToOutputDirectory>true</CopyToOutputDirectory>
+      <Link>runtimes\win-x64\native\libui.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </Content>
+  </ItemGroup>
+  <ItemGroup Condition="'$(RuntimeIdentifier'=='linux-x64'">
     <Content Include="lib\libui.so">
-      <CopyToOutputDirectory>true</CopyToOutputDirectory>
+      <Link>runtimes\win-x64\native\libui.so</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </Content>
     <Content Include="lib\libui.so.0">
-      <CopyToOutputDirectory>true</CopyToOutputDirectory>
+      <Link>runtimes\win-x64\native\libui.so.0</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </Content>
+  </ItemGroup>
+  <ItemGroup Condition="'$(RuntimeIdentifier'=='osx-x64'">
     <Content Include="lib\libui.dylib">
-      <CopyToOutputDirectory>true</CopyToOutputDirectory>
+      <Link>runtimes\win-x64\native\libui.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </Content>
-    <Content Include="lib\libui.A.dylib">
-      <CopyToOutputDirectory>true</CopyToOutputDirectory>
+    <Content Include="lib\libui.dylib.A">
+      <Link>runtimes\win-x64\native\libui.dylib.A</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Visible>false</Visible>
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\External\libui\ui.h">
-      <Link>ref/ui.h</Link>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\LibUISharp\Drawing\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.0.4" />
   </ItemGroup>
   <PropertyGroup>
     <AssemblyName>$(MSBuildProjectName)</AssemblyName>
